--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <h1>Praktika su git</h1>
     <div class="container">
 <img src="/Image/BoxedWater01.jpg" alt="BoxedWater01.jpg">
 <img src="/Image/Female01.jpg" alt="Female01.jpg">
